tests/invalid/explicit_type_argument_missing_after_comma.wio
fn Wrap<T>(value: T) -> T {
    return value;
}

fn Entry() -> i32 {
    return Wrap<i32,>(7);
}
